2012-05-16  Varun Jain  <varunjain@google.com>

        [chromium] No modifier flags (shift/ctrl/alt) in drag&drop events on chromium linux
        https://bugs.webkit.org/show_bug.cgi?id=86236

        Reviewed by Tony Chang.

        * public/WebView.h:
        (WebView):
        * src/WebViewImpl.cpp:
        (WebKit::webInputEventKeyStateToPlatformEventKeyState):
        (WebKit):
        (WebKit::WebViewImpl::dragTargetDragEnter):
        (WebKit::WebViewImpl::dragTargetDragOver):
        (WebKit::WebViewImpl::dragTargetDrop):
        (WebKit::WebViewImpl::dragTargetDragEnterOrOver):
        * src/WebViewImpl.h:
        (WebViewImpl):

2012-05-16  Yury Semikhatsky  <yurys@chromium.org>

        [Chromium] Web Inspector: DevToolsSanityTest.TestScriptsTabIsPopulatedOnInspectedPageRefresh is broken
        https://bugs.webkit.org/show_bug.cgi?id=86629

        Reviewed by Pavel Feldman.

        Listen to DebuggerModel instead of DebuggerPresentationModel which is gone.

        * src/js/Tests.js:
        (.TestSuite.prototype.testScriptsTabIsPopulatedOnInspectedPageRefresh.waitUntilScriptIsParsed):

2012-05-16  Yury Semikhatsky  <yurys@chromium.org>

        [Chromium] Web Inspector: debugger browser tests are broken
        https://bugs.webkit.org/show_bug.cgi?id=86624

        Reviewed by Vsevolod Vlasov.

        Use WebInspector.panels.scripts._scriptMapping instead of
        WebInspector.panels.scripts._presentationModel as the latter
        has been deleted.

        * src/js/Tests.js:
        (.TestSuite.prototype.nonAnonymousUISourceCodes_):

2012-05-16  Keishi Hattori  <keishi@webkit.org>

        [chromium] Add WebKit API to access inner text value of input element
        https://bugs.webkit.org/show_bug.cgi?id=85353

        Reviewed by Kent Tamura.

        * public/WebInputElement.h:
        (WebInputElement):
        * src/WebInputElement.cpp:
        (WebKit::WebInputElement::editingValue):
        (WebKit):